--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ I'm thinking of a Pokémon. Guess which! You have <span id="attempts"></span> gu
 <div id="type_Fairy" class="type-block" style="background-color: rgb(255, 140, 230);">Fairy</div>
 <div id="type_" class="type-block" style="background-color: rgb(255, 171, 115);">Single-Type</div><br><br>
 
-<label for="quantity">Guess Pkmn from gen</label>
+<label for="quantity">Guess Pokémon from gen</label>
 <input class="mg_input" type="number" id="mingen" name="mingen" min="1" max="8" value="" oninput="validity.valid||(value='');">
 <label for="quantity">to</label>
 <input class="mg_input" type="number" id="maxgen" name="maxgen" min="1" max="8" value="" oninput="validity.valid||(value='');"><br>
